--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
 node_modules
 dist
+*.local
+
+tsconfig.app.tsbuildinfo
+tsconfig.node.tsbuildinfo
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
