--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "DSM SDK Script Example",
-  "description": "Initialization of a package to create script with DSM for SDK UI Extensions",
+  "name": "ui-extension-sdk",
+  "description": "A set of tools to build Akeneo PIM UI extensions",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,11 +9,8 @@
     "build": "tsc -b && vite build",
     "preview": "vite preview"
   },
-  "dependenciesComments": {
-    "akeneo-design-system": "For now, the 2.x is not tagged, we need to get it from the repository."
-  },
   "dependencies": {
-    "akeneo-design-system": "github:akeneo/akeneo-design-system",
+    "akeneo-design-system": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^6.1.13"
@@ -23,9 +20,8 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
     "@vitejs/plugin-react": "^4.3.1",
-    "rollup": "4.24.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^7.1.5"
   }
 }
