--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,5 @@
 PIM_HOST=https://your-pim-instance.com
 API_TOKEN=your_api_token_here
 PROJECT_PATH=$(pwd)
+EXTENSION_UUID=your_extension_uuid_here
 
