--- a/examples/quickstart/.env.example
+++ b/examples/quickstart/.env.example
@@ -1,6 +1,6 @@
 # Akeneo PIM Configuration
 PIM_HOST=https://your-pim-instance.com
 API_TOKEN=your_api_token_here
-PROJECT_PATH=$(pwd)
+PROJECT_PATH=$(pwd) // Use absolute path instead of $(pwd) for better compatibility with Make
 EXTENSION_UUID=your_extension_uuid_here
 
