--- a/examples/quickstart/tsconfig.app.json
+++ b/examples/quickstart/tsconfig.app.json
@@ -21,5 +21,8 @@
     "noFallthroughCasesInSwitch": true,
     "types": ["./src/global"]
   },
-  "include": ["src", "src/global.d.ts"]
+  "include": [
+    "src",
+    "examples/quickstart/src/global.d.ts"
+  ]
 }
