--- a/examples/quickstart/Makefile
+++ b/examples/quickstart/Makefile
@@ -1,4 +1,6 @@
-.PHONY: install dev build fast-build create fast-create update fast-update
+.PHONY: install dev build build-dev create create-dev update fast-update update-dev
+
+PROJECT_PATH := $(CURDIR)
 
 # Load environment variables from .env file if it exists
 -include .env
@@ -11,16 +13,50 @@ install:
 dev:
 	npm run dev
 
-# Build the project (full build with type checking)
+# Build the project
 build:
 	npm run build
 	
-# Quick build (skips type checking for faster builds)
-fast-build:
+# Build the project for development purpose with optimizations
+build-dev:
+	@echo "Building with optimized configuration for development..."
+	@echo "Project path: $(PROJECT_PATH)"
 	npx vite build --mode development
 
 # Upload the built file to Akeneo PIM by creating a new extension
 create: build
+	@echo "Creating extension on $(PIM_HOST)..."
+	$(CREATE_EXTENSION_CMD)
+
+# Upload the built file to Akeneo PIM by creating a new extension using optimized build for development
+create-dev: build-dev
+	@echo "Creating extension with optimized configuration for development on $(PIM_HOST)..."
+	$(CREATE_EXTENSION_CMD)
+
+# Credentials configuration for upload (uncomment to use)
+create-with-credentials: build
+	$(CREATE_EXTENSION_WITH_CREDENTIALS_CMD)
+
+# Update an existing extension using its UUID (with full build)
+update: build
+	$(UPDATE_EXTENSION_CMD)
+
+# Update using optimized build-dev
+update-dev: build-dev
+	@echo "Updating extension with UUID: $(EXTENSION_UUID) on $(PIM_HOST) using optimized build..."
+	$(UPDATE_EXTENSION_CMD)
+
+# Update an existing extension with credentials
+update-with-credentials: build
+	$(UPDATE_EXTENSION_WITH_CREDENTIALS_CMD)
+
+# Watch for changes and automatically build/update (requires fswatch to be installed)
+watch-and-update:
+	@echo "Watching for changes and updating on file change..."
+	@node watch.js
+
+# Define common curl command for extension creation
+define CREATE_EXTENSION_CMD
 	@echo "Uploading extension to $(PIM_HOST)..."
 	@echo "Opening $(PROJECT_PATH)/dist/demo.js"
 	@curl --location '$(PIM_HOST)/api/rest/v1/ui-extensions' \
@@ -32,41 +68,10 @@ create: build
 		--form 'configuration[labels][en_US]="SDK script test extension"' \
 		--form 'configuration[default_label]="SDK script test extension"'
 	@echo "Upload complete!"
+endef
 
-# Fast create (quick build + create)
-fast-create: fast-build
-	@echo "Fast-uploading extension to $(PIM_HOST)..."
-	@echo "Opening $(PROJECT_PATH)/dist/demo.js"
-	@curl --location '$(PIM_HOST)/api/rest/v1/ui-extensions' \
-		--header 'Authorization: Bearer $(API_TOKEN)' \
-		--form 'name="sdk_script_extension"' \
-		--form 'type="sdk_script"' \
-		--form 'position="pim.product.panel"' \
-		--form 'file=@"$(PROJECT_PATH)/dist/demo.js"' \
-		--form 'configuration[labels][en_US]="SDK script test extension"' \
-		--form 'configuration[default_label]="SDK script test extension"'
-	@echo "Fast upload complete!"
-
-# Credentials configuration for upload (uncomment to use)
-# upload-with-credentials: build
-# 	@echo "Uploading extension with credentials to $(PIM_HOST)..."
-# 	@curl --location '$(PIM_HOST)/api/rest/v1/ui-extensions' \
-# 		--header 'Authorization: Bearer $(API_TOKEN)' \
-# 		--form 'name="sdk_script_extension"' \
-# 		--form 'type="sdk_script"' \
-# 		--form 'position="pim.product.panel"' \
-# 		--form 'file=@"$(PROJECT_PATH)/dist/demo.js"' \
-# 		--form 'configuration[labels][en_US]="SDK script test extension"' \
-# 		--form 'configuration[default_label]="SDK script test extension"' \
-# 		--form 'credentials[0][code]="credential_code_example"' \
-# 		--form 'credentials[0][type]="Bearer Token"' \
-# 		--form 'credentials[0][value]="token_value"'
-# 	@echo "Upload with credentials complete!"
-
-	@echo "Upload complete!"
-
-# Update an existing extension using its UUID (with full build)
-update: build
+# Define common curl command for extension update
+define UPDATE_EXTENSION_CMD
 	@echo "Updating extension with UUID: $(EXTENSION_UUID) on $(PIM_HOST)..."
 	@curl -X POST '$(PIM_HOST)/api/rest/v1/ui-extensions/$(EXTENSION_UUID)' \
 		-H "Content-Type: multipart/form-data" \
@@ -78,10 +83,29 @@ update: build
 		--form 'configuration[labels][en_US]="SDK script test extension"' \
 		--form 'configuration[default_label]="SDK script test extension"'
 	@echo "Update complete!"
+endef
 
-# Fast update (quick build + update)
-fast-update: fast-build
-	@echo "Fast-updating extension with UUID: $(EXTENSION_UUID) on $(PIM_HOST)..."
+# Define common curl command for extension creation with credentials
+define CREATE_EXTENSION_WITH_CREDENTIALS_CMD
+	@echo "Uploading extension with credentials to $(PIM_HOST)..."
+	@echo "Opening $(PROJECT_PATH)/dist/demo.js"
+	@curl --location '$(PIM_HOST)/api/rest/v1/ui-extensions' \
+		--header 'Authorization: Bearer $(API_TOKEN)' \
+		--form 'name="sdk_script_extension"' \
+		--form 'type="sdk_script"' \
+		--form 'position="pim.product.panel"' \
+		--form 'file=@"$(PROJECT_PATH)/dist/demo.js"' \
+		--form 'configuration[labels][en_US]="SDK script test extension"' \
+		--form 'configuration[default_label]="SDK script test extension"' \
+		--form 'credentials[0][code]="credential_code_example"' \
+		--form 'credentials[0][type]="Bearer Token"' \
+		--form 'credentials[0][value]="token_value"'
+	@echo "Upload with credentials complete!"
+endef
+
+# Define common curl command for extension update with credentials
+define UPDATE_EXTENSION_WITH_CREDENTIALS_CMD
+	@echo "Updating extension with credentials - UUID: $(EXTENSION_UUID) on $(PIM_HOST)..."
 	@curl -X POST '$(PIM_HOST)/api/rest/v1/ui-extensions/$(EXTENSION_UUID)' \
 		-H "Content-Type: multipart/form-data" \
 		--header 'Authorization: Bearer $(API_TOKEN)' \
@@ -90,27 +114,9 @@ fast-update: fast-build
 		--form 'position="pim.activity.navigation.tab"' \
 		--form 'file=@"$(PROJECT_PATH)/dist/demo.js"' \
 		--form 'configuration[labels][en_US]="SDK script test extension"' \
-		--form 'configuration[default_label]="SDK script test extension"'
-	@echo "Fast update complete!"
-
-# Watch for changes and automatically build/update (requires fswatch to be installed)
-watch-and-update:
-	@echo "Watching for changes and updating on file change..."
-	@fswatch -o src/ | xargs -n1 -I{} make fast-update
-
-# Update an existing extension with credentials
-# update-with-credentials: build
-# 	@echo "Updating extension with credentials - UUID: $(EXTENSION_UUID) on $(PIM_HOST)..."
-# 	@curl -X POST '$(PIM_HOST)/api/rest/v1/ui-extensions/$(EXTENSION_UUID)' \
-# 		-H "Content-Type: multipart/form-data" \
-# 		--header 'Authorization: Bearer $(API_TOKEN)' \
-# 		--form 'name="sdk_script_extension"' \
-# 		--form 'type="sdk_script"' \
-# 		--form 'position="pim.activity.navigation.tab"' \
-# 		--form 'file=@"$(PROJECT_PATH)/dist/demo.js"' \
-# 		--form 'configuration[labels][en_US]="SDK script test extension"' \
-# 		--form 'configuration[default_label]="SDK script test extension"' \
-# 		--form 'credentials[0][code]="credential_code_example"' \
-# 		--form 'credentials[0][type]="Bearer Token"' \
-# 		--form 'credentials[0][value]="token_value"'
-# 	@echo "Update with credentials complete!"
+		--form 'configuration[default_label]="SDK script test extension"' \
+		--form 'credentials[0][code]="credential_code_example"' \
+		--form 'credentials[0][type]="Bearer Token"' \
+		--form 'credentials[0][value]="token_value"'
+	@echo "Update with credentials complete!"
+endef
