--- a/examples/quickstart/package.json
+++ b/examples/quickstart/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "akeneo-design-system": "^4.0.0",
+    "chokidar": "^4.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^6.1.13"
@@ -22,6 +23,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
+    "unplugin-swc": "^1.5.7",
     "vite": "^7.1.5"
   }
 }
