--- a/examples/quickstart/.env.example
+++ b/examples/quickstart/.env.example
@@ -1,6 +1,29 @@
+#----------------------------------
 # Akeneo PIM Configuration
+#----------------------------------
 PIM_HOST=https://your-pim-instance.com
-API_TOKEN=your_api_token_here
-PROJECT_PATH=$(pwd) // Use absolute path instead of $(pwd) for better compatibility with Make
+
+#----------------------------------
+# PIM API Connection Configuration
+#----------------------------------
+CLIENT_ID=your_client_id_here
+CLIENT_SECRET=your_client_secret_here
+USERNAME=your_username_here
+PASSWORD=your_password_here
+
+#----------------------------------
+# PIM App Token
+#----------------------------------
+# APP_TOKEN=your_app_token_here
+
+#----------------------------------
+# Extension Configuration
+#----------------------------------
 EXTENSION_UUID=your_extension_uuid_here
 
+#----------------------------------
+# PIM API Tokens (will be refreshed automatically)
+#----------------------------------
+API_TOKEN=
+REFRESH_TOKEN=
+TOKEN_CREATED_AT=
