--- a/examples/quickstart/Makefile
+++ b/examples/quickstart/Makefile
@@ -20,19 +20,19 @@ start:
 	@echo "Please provide the following information:"
 
 	@read -p "Enter your PIM host URL (e.g., https://your-pim-instance.com): " pim_host && \
-	sed -i "s|^PIM_HOST=.*|PIM_HOST=$$pim_host|" .env
+	node set-env.js PIM_HOST $$pim_host
 
 	@read -p "Enter your CLIENT_ID: " client_id && \
-	sed -i "s|^CLIENT_ID=.*|CLIENT_ID=$$client_id|" .env
+	node set-env.js CLIENT_ID $$client_id
 
 	@read -p "Enter your CLIENT_SECRET: " client_secret && \
-	sed -i "s|^CLIENT_SECRET=.*|CLIENT_SECRET=$$client_secret|" .env
+	node set-env.js CLIENT_SECRET $$client_secret
 
 	@read -p "Enter your USERNAME: " username && \
-	sed -i "s|^USERNAME=.*|USERNAME=$$username|" .env
+	node set-env.js USERNAME $$username
 
 	@read -p "Enter your PASSWORD: " password && \
-	sed -i "s|^PASSWORD=.*|PASSWORD=$$password|" .env
+	node set-env.js PASSWORD $$password
 
 	@echo "\nGenerating API token..."
 	@$(MAKE) get-token
@@ -41,9 +41,8 @@ start:
 	@$(MAKE) create-dev
 
 	@echo "\n✅ Setup complete!"
-	@echo "Add the UUID of your UI extension to your .env file as EXTENSION_UUID=your-uuid-here"
-	@echo "You can find your extension UUID at $$(grep -o '^PIM_HOST=.*' .env | sed 's/^PIM_HOST=//')/#/ui-extensions/view_all_ui_extensions"
-	@echo "\nOnce you've added the EXTENSION_UUID, you can run 'make watch' to enable hot reloading during development."
+	@echo "Run 'update-dev' to update your extension after making changes."
+	@echo "\nYou can run 'make watch' to enable hot reloading during development."
 	@echo "This will automatically update your extension when you make changes to the code."
 	@echo "\n🚀 Enjoy building your extension!"
 
@@ -57,6 +56,8 @@ dev:
 
 # Build the project
 build:
+	@echo "Building..."
+    @echo "Project path: $(PROJECT_PATH)"
 	npm run build
 	
 # Build the project for development purpose with optimizations
@@ -67,30 +68,27 @@ build-dev:
 
 # Upload the built file to Akeneo PIM by creating a new extension
 create: build get-token
-	@echo "Creating extension on $(PIM_HOST)..."
-	$(CREATE_EXTENSION_CMD)
+	@node create-extension.js
 
 # Upload the built file to Akeneo PIM by creating a new extension using optimized build for development
 create-dev: build-dev get-token
-	@echo "Creating extension with optimized configuration for development on $(PIM_HOST)..."
-	$(CREATE_EXTENSION_CMD)
+	@node create-extension.js
 
 # Credentials configuration for upload (uncomment to use)
 create-with-credentials: build get-token
-	$(CREATE_EXTENSION_WITH_CREDENTIALS_CMD)
+	@node create-extension.js --with-credentials
 
 # Update an existing extension using its UUID (with full build)
 update: build get-token
-	$(UPDATE_EXTENSION_CMD)
+	@node update-extension.js
 
 # Update using optimized build-dev
 update-dev: build-dev get-token
-	@echo "Updating extension with UUID: $(EXTENSION_UUID) on $(PIM_HOST) using optimized build..."
-	$(UPDATE_EXTENSION_CMD)
+	@node update-extension.js
 
 # Update an existing extension with credentials
 update-with-credentials: build get-token
-	$(UPDATE_EXTENSION_WITH_CREDENTIALS_CMD)
+	@node update-extension.js --with-credentials
 
 # Watch for changes and automatically build/update (requires fswatch to be installed)
 watch:
@@ -100,7 +98,7 @@ watch:
 # Get a token for Akeneo API using credentials from .env file
 # Uses refresh token if token is less than an hour old
 get-token:
-	@echo "Getting API token..."
+	@echo "Getting API token for Akeneo PIM..."
 	@node token.js
 
 # Create .env file from .env.example if it doesn't exist
@@ -112,69 +110,3 @@ copy-env:
 	else \
 		echo ".env file already exists. No changes made."; \
 	fi
-
-# Define common curl command for extension creation
-define CREATE_EXTENSION_CMD
-	@echo "Uploading extension to $(PIM_HOST)..."
-	@echo "Opening $(PROJECT_PATH)/dist/demo.js"
-	@curl --location '$(PIM_HOST)/api/rest/v1/ui-extensions' \
-		--header 'Authorization: Bearer $(API_TOKEN)' \
-		--form 'name="sdk_script_extension"' \
-		--form 'type="sdk_script"' \
-		--form 'position="pim.product.panel"' \
-		--form 'file=@"$(PROJECT_PATH)/dist/demo.js"' \
-		--form 'configuration[labels][en_US]="SDK script test extension"' \
-		--form 'configuration[default_label]="SDK script test extension"'
-	@echo "Upload complete!"
-endef
-
-# Define common curl command for extension update
-define UPDATE_EXTENSION_CMD
-	@echo "Updating extension with UUID: $(EXTENSION_UUID) on $(PIM_HOST)..."
-	@curl -X POST '$(PIM_HOST)/api/rest/v1/ui-extensions/$(EXTENSION_UUID)' \
-		-H "Content-Type: multipart/form-data" \
-		--header 'Authorization: Bearer $(API_TOKEN)' \
-		--form 'name="sdk_script_extension"' \
-		--form 'type="sdk_script"' \
-		--form 'position="pim.activity.navigation.tab"' \
-		--form 'file=@"$(PROJECT_PATH)/dist/demo.js"' \
-		--form 'configuration[labels][en_US]="SDK script test extension"' \
-		--form 'configuration[default_label]="SDK script test extension"'
-	@echo "Update complete!"
-endef
-
-# Define common curl command for extension creation with credentials
-define CREATE_EXTENSION_WITH_CREDENTIALS_CMD
-	@echo "Uploading extension with credentials to $(PIM_HOST)..."
-	@echo "Opening $(PROJECT_PATH)/dist/demo.js"
-	@curl --location '$(PIM_HOST)/api/rest/v1/ui-extensions' \
-		--header 'Authorization: Bearer $(API_TOKEN)' \
-		--form 'name="sdk_script_extension"' \
-		--form 'type="sdk_script"' \
-		--form 'position="pim.product.panel"' \
-		--form 'file=@"$(PROJECT_PATH)/dist/demo.js"' \
-		--form 'configuration[labels][en_US]="SDK script test extension"' \
-		--form 'configuration[default_label]="SDK script test extension"' \
-		--form 'credentials[0][code]="credential_code_example"' \
-		--form 'credentials[0][type]="Bearer Token"' \
-		--form 'credentials[0][value]="token_value"'
-	@echo "Upload with credentials complete!"
-endef
-
-# Define common curl command for extension update with credentials
-define UPDATE_EXTENSION_WITH_CREDENTIALS_CMD
-	@echo "Updating extension with credentials - UUID: $(EXTENSION_UUID) on $(PIM_HOST)..."
-	@curl -X POST '$(PIM_HOST)/api/rest/v1/ui-extensions/$(EXTENSION_UUID)' \
-		-H "Content-Type: multipart/form-data" \
-		--header 'Authorization: Bearer $(API_TOKEN)' \
-		--form 'name="sdk_script_extension"' \
-		--form 'type="sdk_script"' \
-		--form 'position="pim.activity.navigation.tab"' \
-		--form 'file=@"$(PROJECT_PATH)/dist/demo.js"' \
-		--form 'configuration[labels][en_US]="SDK script test extension"' \
-		--form 'configuration[default_label]="SDK script test extension"' \
-		--form 'credentials[0][code]="credential_code_example"' \
-		--form 'credentials[0][type]="Bearer Token"' \
-		--form 'credentials[0][value]="token_value"'
-	@echo "Update with credentials complete!"
-endef
