--- a/examples/quickstart/package.json
+++ b/examples/quickstart/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "akeneo-design-system": "^4.0.0",
+    "axios": "^1.12.2",
     "chokidar": "^4.0.3",
+    "form-data": "^4.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^6.1.13"
