--- a/examples/stock_data_on_panel/package.json
+++ b/examples/stock_data_on_panel/package.json
@@ -16,7 +16,11 @@
     "akeneo-design-system": "github:akeneo/akeneo-design-system",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "dotenv": "^17.2.2",
+    "form-data": "^4.0.4",
+    "axios": "^1.12.2",
+    "chokidar": "^4.0.3"
   },
   "devDependencies": {
     "@types/node": "^22.7.4",
