--- a/examples/quickstart/extension_configuration.json
+++ b/examples/quickstart/extension_configuration.json
@@ -1,6 +1,13 @@
 {
-  "position": "pim.product.panel",
-  "label_en_US": "Quickstart",
-  "default_label": "Quickstart"
+  "position": "pim.activity.navigation.tab",
+  "name": "sdk_script_extension_quickstart",
+  "type": "sdk_script",
+  "file": "dist/quickstart.js",
+  "configuration": {
+    "default_label": "Quickstart",
+    "labels": {
+      "en_US": "Quickstart"
+    }
+  },
+  "credentials": []
 }
-
