--- a/examples/stock_data_on_panel/extension_configuration.json
+++ b/examples/stock_data_on_panel/extension_configuration.json
@@ -1,5 +1,13 @@
 {
   "position": "pim.product.panel",
-  "label_en_US": "Stock data on panel",
-  "default_label": "Stock data on panel"
+  "name": "sdk_script_extension_stock_data",
+  "type": "sdk_script",
+  "file": "dist/stock_data.js",
+  "configuration": {
+    "default_label": "Stock data on panel",
+    "labels": {
+      "en_US": "Stock data on panel"
+    }
+  },
+  "credentials": []
 }
