--- a/examples/quickstart/package.json
+++ b/examples/quickstart/package.json
@@ -19,6 +19,7 @@
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.27.1",
     "@types/node": "^22.7.4",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
