--- a/examples/common/Makefile
+++ b/examples/common/Makefile
@@ -70,6 +70,9 @@ create-dev: build-dev get-token
 create-with-credentials: build get-token
 	@node ../common/create-extension.mjs --with-credentials
 
+create-dev-with-credentials: build-dev get-token
+	@node ../common/create-extension.mjs --with-credentials
+
 update: build get-token
 	@node ../common/update-extension.mjs
 
@@ -77,6 +80,9 @@ update-dev: build-dev get-token
 	@node ../common/update-extension.mjs
 
 update-with-credentials: build get-token
+	@node ../common/update-extension.mjs --with-credentials
+
+update-dev-with-credentials: build-dev get-token
 	@node ../common/update-extension.mjs --with-credentials
 
 watch:
