--- a/examples/common/package.json
+++ b/examples/common/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "form-data": "^4.0.4",
-    "dotenv": "^17.2.2"
+    "dotenv": "^17.2.2",
+    "chokidar": "^4.0.3"
   }
 }
