--- a/examples/common/package.json
+++ b/examples/common/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "common_dependencies",
+  "name": "common-scripts",
   "private": true,
   "type": "module",
   "dependencies": {
     "axios": "^1.12.2",
-    "form-data": "^4.0.4",
+    "chokidar": "^4.0.3",
     "dotenv": "^17.2.2",
-    "chokidar": "^4.0.3"
+    "form-data": "^4.0.4"
   }
 }
