--- a/examples/common/Makefile
+++ b/examples/common/Makefile
@@ -14,21 +14,31 @@ start:
 	@echo "\nCopying environment file..."
 	@$(MAKE) copy-env
 	@echo "\nNow we need to configure your environment variables."
-	@echo "Please provide the following information:"
-	@read -p "Enter your PIM host URL (e.g., https://your-pim-instance.com): " pim_host && \
-	node ../common/set-env.mjs PIM_HOST $$pim_host
-	@read -p "Enter your CLIENT_ID: " client_id && \
-	node ../common/set-env.mjs CLIENT_ID $$client_id
-	@read -p "Enter your CLIENT_SECRET: " client_secret && \
-	node ../common/set-env.mjs CLIENT_SECRET $$client_secret
-	@read -p "Enter your USERNAME: " username && \
-	node ../common/set-env.mjs USERNAME $$username
-	@read -p "Enter your PASSWORD: " password && \
-	node ../common/set-env.mjs PASSWORD $$password
-	@echo "\nGenerating API token..."
-	@$(MAKE) get-token
-	@echo "\nCreating UI extension..."
-	@$(MAKE) create-dev
+	@read -p "Do you already have an App Token? (y/n): " has_token; \
+	if [ "$$has_token" = "y" ] || [ "$$has_token" = "Y" ]; then \
+		read -p "Enter your PIM host URL (e.g., https://your-pim-instance.com): " pim_host && \
+		node ../common/set-env.mjs PIM_HOST $$pim_host; \
+		read -p "Enter your App Token: " app_token && \
+		node ../common/set-env.mjs APP_TOKEN $$app_token; \
+		echo "\nCreating UI extension..."; \
+		$(MAKE) create-dev; \
+	else \
+		echo "Please provide the following information:"; \
+		read -p "Enter your PIM host URL (e.g., https://your-pim-instance.com): " pim_host && \
+		node ../common/set-env.mjs PIM_HOST $$pim_host; \
+		read -p "Enter your CLIENT_ID: " client_id && \
+		node ../common/set-env.mjs CLIENT_ID $$client_id; \
+		read -p "Enter your CLIENT_SECRET: " client_secret && \
+		node ../common/set-env.mjs CLIENT_SECRET $$client_secret; \
+		read -p "Enter your USERNAME: " username && \
+		node ../common/set-env.mjs USERNAME $$username; \
+		read -p "Enter your PASSWORD: " password && \
+		node ../common/set-env.mjs PASSWORD $$password; \
+		echo "\nGenerating API token..."; \
+		$(MAKE) get-token; \
+		echo "\nCreating UI extension..."; \
+		$(MAKE) create-dev; \
+	fi
 	@echo "\n✅ Setup complete!"
 	@echo "Run 'update-dev' to update your extension after making changes."
 	@echo "\nYou can run 'make watch' to enable hot reloading during development."
@@ -60,6 +70,9 @@ create-dev: build-dev get-token
 create-with-credentials: build get-token
 	@node ../common/create-extension.mjs --with-credentials
 
+create-dev-with-credentials: build-dev get-token
+	@node ../common/create-extension.mjs --with-credentials
+
 update: build get-token
 	@node ../common/update-extension.mjs
 
@@ -67,6 +80,9 @@ update-dev: build-dev get-token
 	@node ../common/update-extension.mjs
 
 update-with-credentials: build get-token
+	@node ../common/update-extension.mjs --with-credentials
+
+update-dev-with-credentials: build-dev get-token
 	@node ../common/update-extension.mjs --with-credentials
 
 watch:
