--- a/examples/stock_data_on_panel/package.json
+++ b/examples/stock_data_on_panel/package.json
@@ -9,27 +9,25 @@
     "build": "tsc -b && vite build",
     "preview": "vite preview"
   },
-  "dependenciesComments": {
-    "akeneo-design-system": "For now, the 2.x is not tagged, we need to get it from the repository."
-  },
   "dependencies": {
-    "akeneo-design-system": "github:akeneo/akeneo-design-system",
+    "akeneo-design-system": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^6.1.13",
-    "dotenv": "^17.2.2",
-    "form-data": "^4.0.4",
-    "axios": "^1.12.2",
-    "chokidar": "^4.0.3"
+    "axios": "^1.12.2"
   },
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.27.1",
     "@types/node": "^22.7.4",
     "@types/react": "^17.0.2",
+    "@swc/cli": "^0.7.8",
+    "@swc/core": "^1.13.5",
     "@types/react-dom": "^17.0.2",
     "@vitejs/plugin-react": "^4.3.1",
     "rollup": "4.24.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
+    "unplugin-swc": "^1.5.7",
     "vite": "^7.1.5"
   }
 }
