--- a/examples/quickstart/package.json
+++ b/examples/quickstart/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.12.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.27.1",
