--- a/examples/game/extension_configuration.json
+++ b/examples/game/extension_configuration.json
@@ -1,12 +1,12 @@
 {
   "position": "pim.activity.navigation.tab",
-  "name": "sdk_script_extension_quickstart",
+  "name": "sdk_script_extension_game",
   "type": "sdk_script",
-  "file": "dist/quickstart.js",
+  "file": "dist/game.js",
   "configuration": {
-    "default_label": "Quickstart",
+    "default_label": "Game",
     "labels": {
-      "en_US": "Quickstart"
+      "en_US": "Game"
     }
   },
   "credentials": []
