--- a/examples/generic_dashboard/package.json
+++ b/examples/generic_dashboard/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -24,6 +24,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "^19.1.1",
+    "recharts": "^3.4.1",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
@@ -43,6 +44,7 @@
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
+    "typescript": "^5.9.3",
     "unplugin-swc": "^1.5.7",
     "vite": "^7.1.7",
     "vite-plugin-css-injected-by-js": "^3.5.2"
