Add Generic dashboard with design system options (#16)
* set up selelctor

* add other ds

* add provider

* set ds on each borads

* add polaris type package

* improve polaris

* clean polaris

* improve akeneo design system display

* cleanning

* remove font folder

* reomve polaris design system

* improve the ds selector

* improve mocked data and ds selector

* improve readme

* remove useless ui elements

* downgrade to react 18

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@ dist
 *.local
 *.env
 
-*tsconfig.app.tsbuildinfo
-*tsconfig.node.tsbuildinfo
+**/*.tsbuildinfo
 
 # Editor directories and files
 .vscode/*
@@ -16,3 +15,5 @@ dist
 *.njsproj
 *.sln
 *.sw?
+.claude/*
+claude.md
