--- a/examples/generic_dashboard/package.json
+++ b/examples/generic_dashboard/package.json
@@ -44,9 +44,10 @@
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
+    "terser": "^5.44.1",
     "typescript": "^5.9.3",
     "unplugin-swc": "^1.5.7",
-    "vite": "^7.1.7",
+    "vite": "^7.2.4",
     "vite-plugin-css-injected-by-js": "^3.5.2"
   }
 }
