--- a/examples/quickstart/package.json
+++ b/examples/quickstart/package.json
@@ -24,9 +24,10 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
     "@vitejs/plugin-react": "^4.3.1",
+    "terser": "^5.44.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "unplugin-swc": "^1.5.7",
-    "vite": "^7.1.5"
+    "vite": "^7.2.4"
   }
 }
