--- a/examples/stock_data_on_panel/package.json
+++ b/examples/stock_data_on_panel/package.json
@@ -11,23 +11,24 @@
   },
   "dependencies": {
     "akeneo-design-system": "^4.0.0",
+    "axios": "^1.12.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "styled-components": "^6.1.13",
-    "axios": "^1.12.2"
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@babel/plugin-transform-react-jsx": "^7.27.1",
-    "@types/node": "^22.7.4",
-    "@types/react": "^17.0.2",
     "@swc/cli": "^0.7.8",
     "@swc/core": "^1.13.5",
+    "@types/node": "^22.7.4",
+    "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
     "@vitejs/plugin-react": "^4.3.1",
     "rollup": "4.24.0",
+    "terser": "^5.44.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
     "unplugin-swc": "^1.5.7",
-    "vite": "^7.1.5"
+    "vite": "^7.2.4"
   }
 }
