Single global declaration file for all example

--- a/examples/quickstart/tsconfig.app.json
+++ b/examples/quickstart/tsconfig.app.json
@@ -18,11 +18,10 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "types": ["./src/global"]
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "src",
-    "examples/quickstart/src/global.d.ts"
+    "../common/global.d.ts"
   ]
 }
