remove global and clean imports

--- a/examples/product_release_calendar/tsconfig.app.json
+++ b/examples/product_release_calendar/tsconfig.app.json
@@ -19,10 +19,6 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "types": ["./src/global"]
   },
-  "include": [
-    "src",
-    "examples/product_release_calendar/src/global.d.ts"
-  ]
+  "include": ["src", "../common/global.d.ts"]
 }
