--- a/examples/activation-panel/extension_configuration.json
+++ b/examples/activation-panel/extension_configuration.json
@@ -1,12 +1,12 @@
 {
   "position": "pim.activity.navigation.tab",
-  "name": "sdk_script_extension_quickstart",
+  "name": "sdk_script_extension_activation_panel",
   "type": "sdk_script",
-  "file": "dist/quickstart.js",
+  "file": "dist/activation-panel.js",
   "configuration": {
-    "default_label": "Quickstart",
+    "default_label": "Activation Panel",
     "labels": {
-      "en_US": "Quickstart"
+      "en_US": "Activation Panel"
     }
   },
   "credentials": []
